--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "prettify": "npx prettier . --write",
         "test": "npm run test:pretty && npm run test:types && npm run test:suite",
         "test:pretty": "npx prettier . --check",
-        "test:suite": "node --test",
+        "test:suite": "node --test --experimental-test-coverage",
         "test:types": "npx tsc -p jsconfig.json --noEmit"
     },
     "repository": {
