--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "types": "types/index.d.ts",
     "type": "module",
     "scripts": {
-        "build": "npm run prettify && npm run build:types && npm run test:suite",
-        "build:types": "npx tsc -p jsconfig.json --noEmit false --emitDeclarationOnly",
-        "prettify": "npx prettier . --write",
-        "test": "npm run test:pretty && npm run test:types && npm run test:suite",
-        "test:pretty": "npx prettier . --check",
+        "build": "pnpm run prettify && pnpm run build:types && pnpm run test:suite",
+        "build:types": "tsc -p jsconfig.json --noEmit false --emitDeclarationOnly",
+        "prettify": "prettier . --write",
+        "test": "pnpm run test:pretty && pnpm run test:types && pnpm run test:suite",
+        "test:pretty": "prettier . --check",
         "test:suite": "node --test",
-        "test:types": "npx tsc -p jsconfig.json --noEmit"
+        "test:types": "tsc -p jsconfig.json --noEmit"
     },
     "repository": {
         "type": "git",
