--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "scripts": {
         "build": "pnpm run prettify && pnpm run build:types && pnpm run test:suite",
         "build:types": "tsc -p jsconfig.json --noEmit false --emitDeclarationOnly",
+        "lockfile:sync": "pnpm install --ignore-workspace",
         "prepack": "pnpm run build",
         "prettify": "prettier . --write",
         "test": "pnpm run test:pretty && pnpm run test:types && pnpm run test:suite",
@@ -45,6 +46,6 @@
         "@helios-lang/codec-utils": "^0.1.35",
         "@helios-lang/compiler-utils": "^0.1.55",
         "@helios-lang/type-utils": "^0.1.20",
-        "@helios-lang/uplc": "^0.3.6"
+        "@helios-lang/uplc": "^0.3.7"
     }
 }
