--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,15 +3,16 @@
         "checkJs": true,
         "declaration": true,
         "declarationMap": true,
-        "declarationDir": "types",
+        "declarationDir": "./types",
         "skipLibCheck": true,
-        "strictNullChecks": true,
         "noImplicitThis": true,
+        "noImplicitAny": true,
+        "strictNullChecks": true,
         "moduleResolution": "nodenext",
         "module": "nodenext",
         "target": "esnext",
         "lib": ["es6"]
     },
     "exclude": ["node_modules", "**/*.d.ts"],
-    "include": ["src/**/*.js"]
+    "include": ["src/**/*.js", "node_modules/@helios-lang/type-utils"]
 }
