added two tests taken from PBG validators code-base

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
         "editor.tabSize": 4,
         "editor.insertSpaces": true,
         "editor.codeActionsOnSave": {
-            "source.sortMembers": true
+            "source.sortMembers": "explicit"
         }
     },
     "javascript.preferences.importModuleSpecifierEnding": "js",
